# ObsidianOrganizer

./: .gitignore  ISSUES.md  README.md  main.py  pyproject.toml
.github/workflows/: push_pipeline.yml
docs/: PLANNING.md
src/: main.py
src/agent/: __init__.py  agent_runner.py  tools.py  vault_registry.py  vault_resolver.py
src/api/: dependencies.py  main.py
src/api/routes/: chat.py  dashboard.py  semantic.py
src/api/schemas/: chat_request.py  chat_response.py  set_vault_request.py
src/config/: semantic_config.py
src/core/: content_chunker.py  note_content.py  semantic_index.py  utils.py  vault_analyzer.py  vault_index.py  vault_manager.py
src/obsidian_organizer/: main.py
src/obsidian_organizer/agent/: agent_runner.py  tools.py
src/obsidian_organizer/core/: utils.py  vault_manager.py
src/services/: dashboard_service.py  semantic_service.py  semantic_service_v2.py
tests/: conftest.py  test_dashboard.py  test_obsidian_vault.py
tests/api_tests/: test_chat.py  test_chat_stream.py  test_set_vault.py
ui/: .prettierrc.json  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ui/src/: App.vue  main.ts  style.css
ui/src-tauri/: tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src/components/ui/button/: Button.vue
ui/src/components/ui/card/: Card.vue  CardAction.vue  CardHeader.vue
ui/src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogOverlay.vue  DialogScrollContent.vue  DialogTitle.vue
ui/src/components/ui/input/: Input.vue
ui/src/components/ui/label/: Label.vue
ui/src/layouts/: AppLayout.vue
ui/src/router/: index.ts
ui/src/services/: api.ts
ui/src/views/: ChatView.vue  DashboardView.vue  SetupView.vue
