[project]
name = "obsidianorganizer"
version = "0.1.0"
description = "AI agent for organizing Obsidian vaults"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.6",
    "langgraph>=0.6.5",
    "langsmith>=0.4.14",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "streamlit>=1.50.0",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff]
select = ["E", "F", "I", "UP"]
ignore = ["F401", "F841", "F403", "F405"]
