[project]
name = "obsidianorganizer"
version = "0.1.0"
description = "AI agent for organizing Obsidian vaults"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.4.0",
    "fastapi>=0.124.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-groq>=0.3.8",
    "langchain-ollama>=0.3.6",
    "langfuse>=3.10.6",
    "langgraph>=0.6.5",
    "langsmith>=0.4.14",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "sse-starlette>=3.0.4",
    "streamlit>=1.50.0",
    "uvicorn>=0.38.0",
]


[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.ruff]
select = ["E", "F", "I", "UP"]
ignore = ["F401", "F841", "F403", "F405"]
